change google font and remove nasty letter-spacing issue throughout site headers

--- a/app/assets/stylesheets/homepage.css.scss
+++ b/app/assets/stylesheets/homepage.css.scss
@@ -58,8 +58,8 @@ body.home-page {
 
 }
 .cover-heading{
-  font-size:5em;
-  font-family: 'Kaushan Script', 'cursive';
+  font-size:8em;
+  font-family: 'Paytone One', 'sans-serif';
 }
 .cover .btn-lg {
   padding: 10px 20px;
